@@ -1,5 +1,11 @@
 2010-06-03  Sam Steingold  <sds@gnu.org>
 
+	* defs1.lisp (require): fix the 2010-05-25 patch: do not lock
+	*SYSTEM-PACKAGE-LIST* if "SYSTEM" is not locked, i.e., CLISP was
+	started with "-d" and thus locking is not desired
+
+2010-06-03  Sam Steingold  <sds@gnu.org>
+
 	* modules/pari/pari.lisp (convert-to-pari): use symbols instead of
 	numbers as the typecode argument in pari-cgetg invocations
 	(convert-from-pari-vector): replaces convert-from-pari-VEC and
